# Pastas-Hydro-Insight

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  debug_knmi_failure.py  inspect_obs.py  pyproject.toml  reproduce_pastas_error.py  requirements.txt  test_decomp_type.py  test_props.py
.github/workflows/: ci-arcgis-online.yml
ArcGIS_online/: .gitignore  CHANGELOG.md  CLAUDE.md  requirements.txt
ArcGIS_online/db/: README.md  alembic.ini
ArcGIS_online/flows/: README.md  pipeline.py
ArcGIS_online/scripts/: _observability.py  agol_domeinen_naar_qgis.py  agol_naar_duckdb_v2.py  check_registry_vs_code.py  convert_esri_backup.py  convert_to_excel.py  duckdb_naar_geopackage.py  duckdb_naar_postgis.py  extract_gierzwaluwen.py  incrementeel.py  load_ongewervelden.py  pipeline_rapport.py  postgis_domeinen_aanmaken.py  qgis_postgis_valurelation_setup.py  run_pipeline.bat  snapshot.py  update_qgis_template.py  validate_agol_registry.py
ArcGIS_online/tests/: conftest.py  test_checkpoint.py  test_chunked_write.py  test_drift_checker.py  test_incrementeel.py  test_snapshot_retention.py
BeSI/: .gitignore  CHANGELOG.md  CLAUDE_CODE_PROMPT.md  README.md  main.py  pyproject.toml  requirements.txt  settings.py
BeSI/config/: settings.py  species_metadata.csv
BeSI/core/: calculator.py  loader.py  spatial.py
BeSI/docs/: METHODOLOGIE.md
PASTAS/: CLAUDE.md  README.md
PASTAS/Mantel_Test/: locatie_levering.kml
PASTAS/notebooks/: 01_data_verkenning.ipynb  (+1 more)
PASTAS/pastas_adapter/: pyproject.toml
PASTAS/pastas_adapter/pastas_adapter/: __init__.py  diagnostics.py  fit.py  store.py
PASTAS/pastas_adapter/tests/: test_adapter.py
PASTAS/pastasdash_v2/: CLAUDE.md  README.md  pyproject.toml
PASTAS/pastasdash_v2/pastasdash_v2/: __init__.py  __main__.py  cli.py  config.py  main.py  tasks.py
PASTAS/pastasdash_v2/pastasdash_v2/components/: __init__.py  header.py  plots.py  store_loader.py
PASTAS/pastasdash_v2/pastasdash_v2/compute/: __init__.py  droogte.py  fitting.py  knmi.py  stations.py  timeseries.py
PASTAS/pastasdash_v2/pastasdash_v2/pages/: __init__.py  compare.py  droogte.py  home.py  maps.py  model.py  overview.py
PASTAS/pastasdash_v2/pastasdash_v2/state/: __init__.py  cache.py  persistence.py  store.py
PASTAS/pastasdash_v2/tests/: test_cache.py  test_droogte_compute.py  test_persistence.py  test_plots.py
geo_stack/: .gitignore  README.md  data_sources.yaml  pyproject.toml
geo_stack/geo_stack/: __init__.py  async_http.py  fetch.py  provenance.py  report.py
geo_stack/geo_stack/core/: __init__.py  cache.py  discovery.py  geo_utils.py  normalizer.py
geo_stack/geo_stack/skills/: __init__.py  ahn.py  besi_fetcher.py  bgt.py  bro_grondwater.py  cloud_native.py  gee.py  kadaster.py  knmi.py  landschapsleutel.py  locatieserver.py  ndvi_stac.py
geo_stack/geo_stack/skills/bro/: __init__.py  bodemkaart.py  bro_loket.py  peilbuizen.py
geo_stack/tests/: conftest.py  test_besi.py  test_bro_grondwater.py  test_cache.py  test_fetch.py  test_geo_utils.py  test_knmi.py  test_landschapsleutel.py  test_locatieserver.py  test_normalizer.py
lesa-agent-v2/: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
modules/: analysis.py  cleaner.py  export.py  ingestion.py  pastas_model.py  stresses.py
(+56 files in other folders)
