[project]
name = "besi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "fiona>=1.9.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "importlib-metadata>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
