[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pastas-adapter"
version = "0.1.0"
description = "Adapter tussen LESA-pipeline en PASTAS / PastaStore (publieke API)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "pastas>=1.13",
    "pastastore>=1.8",
    "hydropandas>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["pastas_adapter"]
